# hackathon-todo-phase2

./: .env.example  .gitignore  README.md  auth.py  bcrpyt_limitation_explanation.py  check_port.py  cleanup_duplicate_dirs.js  db.py  debug_bcrypt_fix.py  debug_imports.py  final_server_test.py  init-db.js  main.py  models.py  next.config.js  package-lock.json  package.json  run_server_debug.py  schemas.py  security.py  start_clean_server.py  tailwind.config.mjs  test-auth-connection.js  test-http.js  test-next.js  test-server.js  test_api_validation.py  test_backend_structure.py  test_bcrypt_solution.py  test_hash_function.py  test_server_connection.py  test_server_detailed.py  test_structure.py  test_validation.py  utils.py  vercel.json  verify-vercel-setup-updated.js  verify-vercel-setup.js  verify_fix.py
app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  (+1 more)
backend/: .gitignore  README.md  __init__.py  app.py  config.py  debug_endpoint.py  debug_server.py  diagnose_backend.bat  diagnose_backend.py  init_db.py  main.py  minimal_server.py  models.py  pyproject.toml  run_server.py  run_server_test.py  safe_server.py  security.py  simple_test.py  simple_test_server.py  start_backend.bat  start_backend_fixed.bat  start_backend_port8000.bat  start_backend_sqlite.bat  start_server.py  test_auth_endpoints.py  test_connection.py  test_imports.py  test_imports_final.py  test_routes.py  test_server.py  test_server_complete.py  test_server_full.py  test_setup.py  test_with_client.py
backend/routes/: __init__.py  tasks.py
backend/services/: task_service.py
(+56 files in other folders)
